feat: badge detail

--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -171,6 +171,9 @@
         }
       }
     },
+    "Badge No. %@" : {
+
+    },
     "dev.badge_generator" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1117,25 +1120,22 @@
         }
       }
     },
-    "このバッジは特定の場所を訪れることで獲得できます。探索を続けて、より多くのバッジを集めましょう！" : {
-
-    },
     "このバッジを探しに行く" : {
 
     },
-    "ステータス" : {
-
-    },
-    "バッジについて" : {
+    "住所" : {
 
     },
     "取得日" : {
 
     },
-    "取得済み" : {
+    "取得者" : {
 
     },
-    "取得者" : {
+    "対応する災害" : {
+
+    },
+    "所在地" : {
 
     },
     "未取得" : {
