--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -172,7 +172,140 @@
       }
     },
     "Badge No. %@" : {
-
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Badge No. %@"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Badge No. %@"
+          }
+        }
+      }
+    },
+    "badge.acquisition_date" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Acquisition Date"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "取得日"
+          }
+        }
+      }
+    },
+    "badge.address" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Address"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "住所"
+          }
+        }
+      }
+    },
+    "badge.find_this_badge" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Find this badge"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "このバッジを探しに行く"
+          }
+        }
+      }
+    },
+    "badge.getter" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Getter"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "取得者"
+          }
+        }
+      }
+    },
+    "badge.location" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Location"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "所在地"
+          }
+        }
+      }
+    },
+    "badge.not_acquired" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Not Acquired"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "未取得"
+          }
+        }
+      }
+    },
+    "badge.supported_disasters" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Supported Disasters"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "対応する災害"
+          }
+        }
+      }
     },
     "dev.badge_generator" : {
       "extractionState" : "manual",
@@ -395,6 +528,23 @@
         }
       }
     },
+    "badge.close" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Close"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "閉じる"
+          }
+        }
+      }
+    },
     "getter_name" : {
 
     },
@@ -487,6 +637,23 @@
         }
       }
     },
+    "home.disaster.inland_flood" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Inland Flood"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "内水氾濫"
+          }
+        }
+      }
+    },
     "home.disaster.landslide" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -499,7 +666,24 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "土砂崩れ"
+            "value" : "土砂災害"
+          }
+        }
+      }
+    },
+    "home.disaster.storm_surge" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Storm Surge"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "高潮"
           }
         }
       }
@@ -534,6 +718,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "台風"
+          }
+        }
+      }
+    },
+    "home.disaster.volcano" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Volcano"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "火山"
           }
         }
       }
@@ -1119,30 +1320,6 @@
           }
         }
       }
-    },
-    "このバッジを探しに行く" : {
-
-    },
-    "住所" : {
-
-    },
-    "取得日" : {
-
-    },
-    "取得者" : {
-
-    },
-    "対応する災害" : {
-
-    },
-    "所在地" : {
-
-    },
-    "未取得" : {
-
-    },
-    "閉じる" : {
-
     }
   },
   "version" : "1.1"
