--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -4,9 +4,6 @@
     "%lld" : {
 
     },
-    "%lld 歩" : {
-
-    },
     "auth.back" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -326,6 +323,57 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "対応する災害"
+          }
+        }
+      }
+    },
+    "chart.date_label" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Date"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "日付"
+          }
+        }
+      }
+    },
+    "chart.distance_label" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Distance"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "距離"
+          }
+        }
+      }
+    },
+    "chart.steps_label" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Steps"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "歩数"
           }
         }
       }
@@ -974,6 +1022,23 @@
         }
       }
     },
+    "home.stats.close" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Close"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "閉じる"
+          }
+        }
+      }
+    },
     "home.stats.completed_missions" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -991,6 +1056,57 @@
         }
       }
     },
+    "home.stats.detail_title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Statistics Details"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "統計詳細"
+          }
+        }
+      }
+    },
+    "home.stats.distance_format" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%.1fkm"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%.1fkm"
+          }
+        }
+      }
+    },
+    "home.stats.distance_unit" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "km"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "km"
+          }
+        }
+      }
+    },
     "home.stats.distance_walked" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1004,6 +1120,91 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "歩いた距離"
+          }
+        }
+      }
+    },
+    "home.stats.mission_history" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mission History"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ミッション履歴"
+          }
+        }
+      }
+    },
+    "home.stats.no_data" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No Data"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "データなし"
+          }
+        }
+      }
+    },
+    "home.stats.recent_missions" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Recent Mission Statistics"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "最近のミッション統計"
+          }
+        }
+      }
+    },
+    "home.stats.steps_format" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld steps"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld 歩"
+          }
+        }
+      }
+    },
+    "home.stats.steps_unit" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : " steps"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : " 歩"
           }
         }
       }
@@ -1339,34 +1540,10 @@
         }
       }
     },
-    "データなし" : {
-
-    },
-    "ミッション履歴" : {
-
-    },
-    "最近のミッション統計" : {
-
-    },
-    "日付" : {
-
-    },
-    "歩数" : {
-
-    },
     "歩数: %lld 歩" : {
 
     },
-    "統計詳細" : {
-
-    },
-    "距離" : {
-
-    },
     "避難地域: %@" : {
-
-    },
-    "閉じる" : {
 
     }
   },
