--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -14,6 +14,9 @@
     "%lld" : {
 
     },
+    "AI will automatically generate the description and color theme" : {
+
+    },
     "auth.back" : {
       "extractionState" : "manual",
       "localizations" : {
