--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -1333,6 +1333,9 @@
     "ID:" : {
 
     },
+    "Load Direct Shelters" : {
+
+    },
     "map.danger_zone.alert_message" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -2132,23 +2135,6 @@
         }
       }
     },
-    "result.skip" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Skip"
-          }
-        },
-        "ja" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "スキップ"
-          }
-        }
-      }
-    },
     "result.shelter_reached" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -2162,6 +2148,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "避難所に到着"
+          }
+        }
+      }
+    },
+    "result.skip" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Skip"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "スキップ"
           }
         }
       }
