--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -1950,13 +1950,13 @@
         "en": {
           "stringUnit": {
             "state": "translated",
-            "value": "Enable Location"
+            "value": "Continue"
           }
         },
         "ja": {
           "stringUnit": {
             "state": "translated",
-            "value": "位置情報を有効にする"
+            "value": "続ける"
           }
         }
       }
